syntax = "proto3";

package model;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option (gogoproto.messagename_all) = true;

//configuration comes from: https://github.com/osrg/gobgp/blob/master/api/gobgp.proto


//BGP configuration
message BgpConf {
    GlobalConf global = 1;
    repeated PeerConf peers = 2;
}


// global configuration
message GlobalConf {
    uint32 as = 1;
    string router_id = 2;
    int32 listen_port = 3;
    repeated string listen_addresses = 4;
    repeated uint32 families = 5;
    bool use_multiple_paths = 6;
    //RouteSelectionOptionsConfig route_selection_options = 7;
    //DefaultRouteDistance default_route_distance = 8;
    //Confederation confederation = 9;
    //GracefulRestart graceful_restart = 10;
    //ApplyPolicy apply_policy = 11;
}

// neighbor configuration, one struct will be created per peer
message PeerConf {
    string name = 1;
    string auth_password = 2;
    string description = 3;
    uint32 local_as = 4;
    string neighbor_address = 5;
    uint32 peer_as = 6;
    string peer_group = 7;
    uint32 peer_type = 8;
    enum RemovePrivateAs {
        NONE = 0;
        ALL = 1;
        REPLACE = 2;
    }
    RemovePrivateAs remove_private_as = 9;
    bool route_flap_damping = 10;
    uint32 send_community = 11;
    string neighbor_interface = 12;
    string vrf = 13;
    uint32 allow_own_as = 14;
    bool replace_peer_as = 15;
    bool admin_down = 16;
}